--- a/ffmap/web/templates/router_list.html
+++ b/ffmap/web/templates/router_list.html
@@ -1,4 +1,5 @@
 {% extends "bootstrap.html" %}
+{% block title %}{{super()}} Routers{% endblock %}
 {% block content %}
 <table class="table table-condensed table-striped table-bordered" style="margin-bottom: 8px;">
 	<tr>
