--- a/ffmap/web/templates/map.html
+++ b/ffmap/web/templates/map.html
@@ -1,5 +1,6 @@
 {% extends "bootstrap.html" %}
 {% block viewport %}{{super()}}, maximum-scale=1.0, user-scalable=no{% endblock %}
+{% block title %}{{super()}} Map{% endblock %}
 {% block head %}{{super()}}
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
