filter/search router_list

--- a/ffmap/web/templates/bootstrap.html
+++ b/ffmap/web/templates/bootstrap.html
@@ -4,7 +4,7 @@
 	{% block head %}
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="{% block viewport %}width=device-width, initial-scale=1{% endblock %}">
+	<meta name="viewport" content="{% block viewport %}width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no{% endblock %}">
 
 	<title>{% block title %}FF-Map{% endblock %}</title>
 
@@ -40,6 +40,8 @@
 					<li class="{{ "active" if request.endpoint in fkt }}"><a href="{{ url_for(fkt[0]) }}">{{ text }}</a></li>
 					{%- endfor %}
 				</ul>
+				{%- block search %}
+				{%- endblock %}
 			</div><!--/.nav-collapse -->
 		</div>
 	</nav>
