--- a/ffmap/web/templates/bootstrap.html
+++ b/ffmap/web/templates/bootstrap.html
@@ -46,6 +46,20 @@
 		</div>
 	</nav>
 
-	<div class="container main_content">{% block content %}{% endblock %}</div><!-- /.container -->
+	<div class="container main_content">
+		{%- block alerts %}
+			{%- with messages = get_flashed_messages(with_categories=true) %}
+				{%- if messages %}
+					{%- for category, message in messages %}
+					<div class="alert alert-{{ category }} alert-dismissible" role="alert" style="margin-bottom: 0px; margin-top: 20px;">
+						<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+						{{ message|safe }}
+					</div>
+					{%- endfor %}
+				{%- endif %}
+			{%- endwith %}
+		{%- endblock %}
+		{%- block content %}{% endblock -%}
+	</div><!-- /.container -->
 </body>
 </html>
