--- a/ffmap/web/templates/statistics.html
+++ b/ffmap/web/templates/statistics.html
@@ -57,7 +57,7 @@
 							<td class="success">{{ value["online"] or 0 }}</td>
 							<td class="danger">{{ value["offline"] or 0 }}</td>
 							<td class="warning">{{ value["unknown"] or 0 }}</td>
-							<td class="active">{{ value["routers"] or 0 }}</td>
+							<td class="active">{{ hoods_sum[hood]["routers"] or 0 }}</td>
 							<td class="info">{{ hoods_sum[hood]["clients"] or 0 }}</td>
 						</tr>
 						{%- endfor %}
@@ -77,20 +77,22 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">Newest Routers</div>
 				<div class="panel-body">
-					<table class="table table-condensed">
-						<tr>
-							<th>Hostname</th>
-							<th>Hood</th>
-							<th>Created</th>
-						</tr>
-						{%- for router in newest_routers|reverse %}
-						<tr>
-							<td><a href="{{ url_for('router_info', dbid=router._id) }}">{{ router.hostname }}</a></td>
-							<td>{{ router.hood }}</td>
-							<td class="text-nowrap">{{ router.created|utc2local|format_dt }}</td>
-						</tr>
-						{%- endfor %}
-					</table>
+					<div class="table-responsive">
+						<table class="table table-condensed">
+							<tr>
+								<th>Hostname</th>
+								<th>Hood</th>
+								<th>Created</th>
+							</tr>
+							{%- for router in newest_routers|reverse %}
+							<tr>
+								<td><a href="{{ url_for('router_info', dbid=router._id) }}">{{ router.hostname }}</a></td>
+								<td>{{ router.hood }}</td>
+								<td class="text-nowrap">{{ router.created|utc2local|format_dt }}</td>
+							</tr>
+							{%- endfor %}
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
