--- a/ffmap/web/templates/bootstrap.html
+++ b/ffmap/web/templates/bootstrap.html
@@ -8,6 +8,8 @@
 
 	<title>{% block title %}FF-Map{% endblock %}</title>
 
+	<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/vnd.microsoft.icon">
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
