--- a/ffmap/web/templates/map.html
+++ b/ffmap/web/templates/map.html
@@ -1,8 +1,8 @@
 {% extends "bootstrap.html" %}
 {% block title %}{{super()}} Map{% endblock %}
 {% block head %}{{super()}}
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
+	<link rel="stylesheet" href="{{ url_for('static', filename='leaflet/leaflet.css') }}" />
+	<script src="{{ url_for('static', filename='leaflet/leaflet.js') }}"></script>
 	<style type="text/css">
 		html, body {
 			height: 100%;
