--- a/ffmap/web/templates/bootstrap.html
+++ b/ffmap/web/templates/bootstrap.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="{% block viewport %}width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no{% endblock %}">
 
-	<title>{% block title %}FF-Map{% endblock %}</title>
+	<title>{% block title %}FFF Monitoring{% endblock %}</title>
 
 	<link rel="icon" href="{{ url_for('static', filename='img/favicon.ico') }}" type="image/vnd.microsoft.icon">
 
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">FF-Map</a>
+				<a class="navbar-brand" href="#">FFF Monitoring</a>
 			</div>
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
