--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -9,6 +9,7 @@
 			</div>
 			<div class="col-xs-8 col-sm-8"><p>
 				Monitoring f&uuml;r das Freifunk Franken Funknetzwerk.<br />
+				Hier werden nur Daten von Routern ab Firmware 0.5.1 angezeigt.<br />
 				Der Quellcode für diese Webanwendung steht unter der GPL und kann <a href="https://github.com/asdil12/ff-map">hier</a>
 				heruntergeladen werden.
 			</p></div>
