--- a/ffmap/web/templates/map.html
+++ b/ffmap/web/templates/map.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap.html" %}
-{% block title %}{{super()}} Map{% endblock %}
+{% block title %}{{super()}} :: Map{% endblock %}
 {% block head %}{{super()}}
 	<link rel="stylesheet" href="{{ url_for('static', filename='leaflet/leaflet.css') }}" />
 	<script src="{{ url_for('static', filename='leaflet/leaflet.js') }}"></script>
