--- a/ffmap/web/templates/router_list.html
+++ b/ffmap/web/templates/router_list.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap.html" %}
-{% block title %}{{super()}} Routers{% endblock %}
+{% block title %}{{super()}} :: Routers{% endblock %}
 {% block head %}{{super()}}
 	<script src="{{ url_for('static', filename='js/datatables/jquery.dataTables.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/datatables/dataTables.bootstrap.min.js') }}"></script>
