--- a/ffmap/web/templates/bootstrap.html
+++ b/ffmap/web/templates/bootstrap.html
@@ -36,12 +36,23 @@
 					{%- for fkt, text in [(["index"], "Home"),
 					                      (["router_map"], "Map"),
 					                      (["router_list", "router_info"], "Routers"),
+					                      (["user_list", "user_info"], "Users"),
 					                      (["global_statistics"], "Statistics"),
 					] %}
 					<li class="{{ "active" if request.endpoint in fkt }}"><a href="{{ url_for(fkt[0]) }}">{{ text }}</a></li>
 					{%- endfor %}
 				</ul>
 				{%- block search %}
+				{%- endblock %}
+				{%- block nav_login %}
+				<p class="navbar-text navbar-right" style="margin-right: 0;">
+				{%- if "user" in session -%}
+				<a href="{{ url_for('user_info', nickname=session.user) }}" class="navbar-link">{{ session.user }}</a>
+				[<a href="{{ url_for('logout') }}" class="navbar-link">Logout</a>]
+				{%- else %}
+				<a href="{{ url_for('login') }}" class="navbar-link">Login</a>
+				{%- endif %}
+				</p>
 				{%- endblock %}
 			</div><!--/.nav-collapse -->
 		</div>
