Added FFF link to nav bar (fixes #44)
Signed-off-by: Steffen Pankratz <kratz00@gmx.de>

--- a/ffmap/web/templates/bootstrap.html
+++ b/ffmap/web/templates/bootstrap.html
@@ -41,6 +41,7 @@
 					] %}
 					<li class="{{ "active" if request.endpoint in fkt }}"><a href="{{ url_for(fkt[0]) }}">{{ text }}</a></li>
 					{%- endfor %}
+					<li><a href="https://freifunk-franken.de/">Freifunk Franken</a></li>
 				</ul>
 				{%- block search %}
 				{%- endblock %}
