Add explanation page for API functions
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

Tested-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/bootstrap.html
+++ b/ffmap/web/templates/bootstrap.html
@@ -38,6 +38,7 @@
 					                      (["router_list", "router_info"], "Routers"),
 					                      (["user_list", "user_info"], "Users"),
 					                      (["global_statistics"], "Statistics"),
+					                      (["apidoc"], "API"),
 					] %}
 					<li class="{{ "active" if request.endpoint in fkt }}"><a href="{{ url_for(fkt[0]) }}">{{ text }}</a></li>
 					{%- endfor %}
