Add loadavg graph for routers
Fixes #55

Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/router.html
+++ b/ffmap/web/templates/router.html
@@ -293,6 +293,12 @@
 				</div>
 			</div>
 			<div class="panel panel-default">
+				<div class="panel-heading">Average Load</div>
+				<div class="panel-body">
+					<div id="loadstat" class="graph"></div>
+				</div>
+			</div>
+			<div class="panel panel-default">
 				<div class="panel-heading">Memory</div>
 				<div class="panel-body">
 					<div id="memstat" class="graph"></div>
@@ -320,6 +326,7 @@
 			memory_graph();
 			process_graph();
 			client_graph();
+			loadavg_graph();
 
 			$("#netif-list li").on("click", function() {
 				$("#netif-list li").removeClass("active");
