--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -9,10 +9,8 @@
 			</div>
 			<div class="col-xs-8 col-sm-8"><p>
 				Monitoring f&uuml;r das Freifunk Franken Funknetzwerk.<br />
-				Hier werden Daten von Routern ab Firmware 0.5.1 direkt angezeigt.<br />
-				Die alten Router werden &uuml;ber den <a href="https://github.com/asdil12/fff-monitoring/tree/master/contrib/alfred_legacy_provider">Alfred Legacy Provider</a> abgefragt,<br />
-				sodass sie ebenfalls hier angezeigt werden k&ouml;nnen.<br />
-				Der Quellcode für diese Webanwendung steht unter der GPL und kann <a href="https://github.com/asdil12/fff-monitoring">hier</a>
+				Hier werden Daten von Routern ab Firmware angezeigt.<br />
+				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/asdil12/fff-monitoring">hier</a>
 				heruntergeladen werden.
 			</p></div>
 		</div>
