No legacy anymore: Fix missing firmware
Signed-off-by: Adrian Schmutzler <freifunk@adrianschmutzler.de>

--- a/ffmap/web/templates/index.html
+++ b/ffmap/web/templates/index.html
@@ -9,7 +9,7 @@
 			</div>
 			<div class="col-xs-8 col-sm-8"><p>
 				Monitoring f&uuml;r das Freifunk Franken Funknetzwerk.<br />
-				Hier werden Daten von Routern ab Firmware angezeigt.<br />
+				Hier werden Daten von Routern ab Firmware 0.5.2 angezeigt.<br />
 				Der Quellcode f&uuml;r diese Webanwendung steht unter der GPL und kann <a href="https://github.com/asdil12/fff-monitoring">hier</a>
 				heruntergeladen werden.
 			</p></div>
